--- a/indext.html
+++ b/indext.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Awoof quality 4u</title>
-    </head>
+ <head>
+    <title>AwoofQ4u</title>
+ </head>
     <body>
 <p>Hello World!</p>
     </body>
